--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "moment": "^2.22.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "z-date-picker": "^1.0.2"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
