--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^9.12.0",
+    "markdown-it-container": "^2.0.0",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
+    "vue-markdown-loader": "^2.4.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -34,6 +38,7 @@
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "markdown-loader": "^3.0.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
