--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "dep": " node upload.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
@@ -20,6 +21,7 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "ali-oss": "^6.0.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
