--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,6 @@
-name: Node CI
+name: upload oss
 
-on: [push]
+on: push
 
 jobs:
   build:
@@ -12,6 +12,9 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@master
+    
     - name: setup aliyun oss
       uses: manyuanrong/setup-ossutil@master
       with:
