--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,14 +15,21 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
 
     steps:
+      #拉取代码
     - name: Checkout
       uses: actions/checkout@master
-    
+
+    - name: build
+      run: |
+        yarn install
+        yarn run build
+
     - name: setup aliyun oss
       uses: manyuanrong/setup-ossutil@master
       with:
         endpoint: oss-cn-shanghai.aliyuncs.com
         access-key-id: ${{ secrets.accessKeyId }}
         access-key-secret: ${{ secrets.accessKeySecret }}
+        
     - name: cp files to aliyun
       run: ossutil cp -rf ./dist oss://zhuss/test/
