--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -10,15 +10,22 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [8.x, 10.x, 12.x]
 
     steps:
       #拉取代码
     - name: Checkout
       uses: actions/checkout@master
 
+     # 使用 node:10
+    - name: use Node.js 10.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 10.x 
+      
+      #打包
     - name: build
       run: |
         yarn install
